# first-project-on-flask

./: README.md  app.py  pyproject.toml  requirements.txt
templates/: home.html
