[tool.poetry]
name = "repl_nix_first-project-on-flask"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
opencv-python = "^4.7.0"
zsvision = "^0.7.12"
numpy = "1.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
